fixe dark mode with global styles

--- a/src/App.css
+++ b/src/App.css
@@ -32,15 +32,19 @@
 }
 
 body {
-  background: var(--secondary2) !important;
   color: var(--text);
+  background-color: var(--secondary2) !important;
+  position: relative;
+
 }
 
 .container {
   background-color: var(--secondary2) !important;
-  height: 100% or 100vh;
-  width: 100% or 100vw ;
+  height: auto !important;
+  width: 100%;
   padding-top: 70px;
+  position: absolute;
+  min-height: 100%;
 }
 
 .dashboard__container {
